# dspy-rag-bm25-rerank-llm

./: .env.example  .gitignore  .windsurfrules  README.md  api.py  api_client.py  app.py  bm25_utils.py  cli.py  client.py  config.py  main.py  pyproject.toml  rag_pipeline.py  retrievers.py
.streamlit/: config.toml
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
src/dspy_rag_app/: bm25_utils.py  config.py  data.py  nltk_utils.py  rag_pipeline.py  retrievers.py  utils.py
