[project]
name = "dspy-rag-bm25-rerank-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy",
    "chromadb",
    "sentence-transformers",
    "rank_bm25",
    "nltk",
    "openrouter",
    "streamlit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to find packages in src
