[project]
name = "dspy-rag-bm25-rerank-llm"
version = "0.2.0"
description = "RAG pipeline built with DSPy and inference pipeine using LitServe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy",
    "chromadb",
    "sentence-transformers",
    "rank_bm25",
    "nltk",
    "openrouter",
    "streamlit",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "litserve>=0.2.8",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to find packages in src
